{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 4,
  "lineage": "0314ca8a-c4bc-2fa0-80a8-a9cea3d230d5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "docker-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "4000",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-24T09:54:56.290-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oceanic-hangout-403013/global/firewalls/docker-firewall",
            "log_config": [],
            "name": "docker-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/global/networks/default",
            "priority": 1000,
            "project": "oceanic-hangout-403013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/global/firewalls/docker-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "runner-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-24T09:54:56.323-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/oceanic-hangout-403013/global/firewalls/ssh-rule",
            "log_config": [],
            "name": "ssh-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/global/networks/default",
            "priority": 1000,
            "project": "oceanic-hangout-403013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/global/firewalls/ssh-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "runner-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "runner-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/zones/us-central1-c/disks/runner-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/oceanic-hangout-403013/zones/us-central1-c/instances/runner-instance",
            "instance_id": "1921864741301143566",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "sbpclQaaLEw=",
            "name": "runner-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.28.29.110",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/regions/us-central1/subnetworks/default",
                "subnetwork_project": "oceanic-hangout-403013"
              }
            ],
            "project": "oceanic-hangout-403013",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/oceanic-hangout-403013/zones/us-central1-c/instances/runner-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "runner-instance"
            ],
            "tags_fingerprint": "YpgihoqWnR4=",
            "zone": "us-central1-c"
          }
        }
      ]
    }
  ]
}